# LearnForge---Backend

./: .dockerignore  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  FIRESTORE_DEPLOYMENT_GUIDE.md  Makefile  README.md  docker-compose.yml  firestore.rules  main.py  pyproject.toml  unit_testing_guide.md
.github/workflows/: ci.yml  deploy.yml
app/agents/mission_ally/: agent.py
app/agents/mission_ally/mission_flow_briefer/: agent.py
app/agents/mission_ally/mission_flow_briefer/tools/: update_checkpoint_goal.py
app/agents/mission_ally/mission_greeter/: agent.py
app/agents/mission_ally/mission_help_desk/: agent.py
app/agents/mission_ally/mission_sensei/: agent.py
app/agents/mission_ally/mission_sensei/content_composer/: agent.py
app/agents/mission_ally/mission_sensei/content_formatter/: agent.py
app/agents/mission_ally/mission_sensei/content_searcher/: agent.py
app/agents/mission_ally/mission_sensei/tools/: mark_completed.py
app/agents/mission_ally/mission_sensei/video_selector/: agent.py
app/agents/mission_ally/mission_wrapper/: agent.py
app/agents/mission_ally/tools/: increment_checkpoint.py  initialize_session.py
app/agents/mission_commander/: README.md  agent.py
app/agents/mission_commander/mission_content_weaver/: agent.py
app/agents/mission_commander/mission_curator/: agent.py
app/agents/mission_commander/mission_director/: agent.py
app/agents/mission_commander/pathfinder/: agent.py
app/agents/mission_commander/utils/: fetch_mission.py
app/agents/mission_content_weaver/: README.md  agent.py
app/agents/search_agent/: agent.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/routes/: auth.py  mission.py  mission_ally.py  mission_commander.py  session.py  user.py
app/core/: app.py  config.py  initializer.py  set_middleware.py  set_routes.py
app/dependencies/: __init__.py  auth.py
app/initializers/: cloud_logging.py  firebase.py  firestore.py
app/middleware/: firebase_middleware.py  firebase_session_middleware.py
app/models/: checkpoint.py  enrollment.py  enrollment_session_log.py  mission.py  session_log.py  user.py  websocket_messages.py
app/services/: checkpoint_service.py  enrollment_service.py  enrollment_session_log_service.py  firebase.py  mission_service.py  session_log_service.py  user_service.py
app/utils/: auth.py  firestore_exception.py  youtube_api.py
coding_guidelines/: SESSION_AUTH_GUIDE.md  unit_testing_guide.md
docs/: CLOUD_SQL_ADK_SETUP_GUIDE.md  MISSION_ALLY_WEBSOCKET_API.md  MISSION_COMMANDER_WEBSOCKET_API.md  WEBSOCKET_AUTHENTICATION.md
firestore/: firestore.indexes.json  firestore.rules
frontend_mock_test/: test_mission_websocket.html
tests/: conftest.py  test_firebase_middleware.py
tests/api/: test_auth_endpoint.py  test_mission_commander_websocket.py  test_mission_endpoint.py  test_session_endpoint.py  test_user_endpoint.py
tests/dependencies/: __init__.py  test_auth.py
tests/middleware/: test_firebase_middleware.py  test_firebase_session_middleware.py
tests/mocks/: __init__.py  firestore.py
tests/models/: test_checkpoint.py  test_enrollment.py  test_enrollment_session_log.py  test_mission.py  test_user.py  test_websocket_messages.py
tests/services/: test_checkpoint_service.py  test_enrollment_service.py  test_enrollment_session_log_service.py  test_mission_service.py  test_session_log_service.py  test_user_service.py
(+6 files in other folders)
