[project]
name = "learnforge"
version = "0.1.0"
description = "Backend for LearnForge: Your personalized AI Learning Architect"
authors = [
    {name = "rashikakarki",email = "rashikakarki9841@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "google-adk (==1.15.1)",
    "fastapi (==0.118.3)",
    "PyJWT (>=2.8.0,<3.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "google-auth (>=2.41.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
