[project]
name = "learnforge"
version = "0.1.0"
description = "Backend for LearnForge: Your personalized AI Learning Architect"
authors = [
    {name = "rashikakarki",email = "rashikakarki9841@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "google-adk (==1.15.1)",
    "fastapi (==0.118.3)",
    "PyJWT (>=2.8.0,<3.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "google-auth (>=2.41.1,<3.0.0)",
    "firebase-admin (==6.5.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "google-cloud-firestore (>=2.21.0,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "email-validator (>=2.3.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
