[tool.poetry]
name = "learnforge"
version = "0.1.0"
description = "Backend for LearnForge: Your personalized AI Learning Architect"
authors = ["rashikakarki <rashikakarki9841@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = ">=2.11.0,<3.0.0"
pydantic = ">=2.12.3,<3.0.0"
google-adk = "1.15.1"
fastapi = "0.118.3"
PyJWT = ">=2.8.0,<3.0.0"
uvicorn = ">=0.38.0,<0.39.0"
google-auth = ">=2.41.1,<3.0.0"
firebase-admin = "6.5.0"
python-dotenv = ">=1.1.1,<2.0.0"
google-cloud-firestore = ">=2.21.0,<3.0.0"
pytest = ">=8.4.2,<9.0.0"
httpx = ">=0.28.1,<0.29.0"
email-validator = ">=2.3.0,<3.0.0"
ruff = ">=0.1.0,<0.2.0"
black = ">=24.10.0,<25.0.0"
isort = ">=5.12.0,<6.0.0"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
